--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>MeetMe Personal</title>
+        <title>Matthew Kirshy</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/linericon-style.css">
@@ -70,24 +70,24 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/download.png" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
-									<h6>Hello Everybody, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
-									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+									<h6>Hello Everybody, I am</h6>
+									<h3>Matthew Kirshy</h3>
+									<h4>Senior Computer Science Student</h4>
+									<p>at University at Buffalo</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> <span class="__cf_email__" data-cfemail="21435452484f445252514d404f61454e4f404d45">[email&#160;protected]</span></a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
+										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> 
+										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>-->
+										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
-										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
+										<li><a href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/mjkirshy/</a></li>
 									</ul>
 								</div>
 							</div>
