--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 									<ul class="list personal_social">
 										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-										<li><a href="#"><i class="fa fa-linkedin"></i>https://www.linkedin.com/in/mjkirshy/</a></li>
+										<li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
