--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
 									<h4>Senior Computer Science Student</h4>
 									<p>at University at Buffalo</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
+										<li><a href="#"><i class="lnr-calendar-full"></i> January, 13th 1989</a></li>
 										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> 
 										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>-->
-										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
+										<li><a href="#"><i class="lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-										<li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa fa-linkedin"></i></a></li>
+										<li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
