--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 									<ul class="list personal_social">
 										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-										<li><img src="img/linkedin-icon.png" alt="https://www.linkedin.com/in/mjkirshy"></li>
-										<!-- <li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa-linkedin"></i></a></li> -->
+										<li><a href="https://www.linkedin.com/in/mjkirshy"></a><img src="img/linkedin-icon.png" alt=""></a></li>
+										<!-- <li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa-linkedin"></i></li> -->
 									</ul>
 								</div>
 							</div>
