--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/linericon-style.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/simpleLightbox.css">
         <link rel="stylesheet" href="css/nice-select.css">
@@ -79,16 +79,16 @@
 									<h4>Senior Computer Science Student</h4>
 									<p>at University at Buffalo</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr-calendar-full"></i> January, 13th 1989</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
 										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> 
 										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>-->
-										<li><a href="#"><i class="lnr-home"></i> Buffalo, NY</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
 										<li><a href="https://www.linkedin.com/in/mjkirshy"><img src="img/linkedin-icon.png" alt=""></a></li>
-										<!-- <li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fa-linkedin"></i></li> -->
+										<li><a href="#"><i class="fa fa-linkedin"></i></li>
 									</ul>
 								</div>
 							</div>
