--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
 										<li><a href="https://www.linkedin.com/in/mjkirshy"><img src="img/linkedin-icon.png" alt=""></a></li>
-										<li><a href="#"><i class="fa fa-linkedin"></i></li>
+										<li><a href="#"><i class="fab fa-linkedin"></i></li>
 									</ul>
 								</div>
 							</div>
