--- a/index.html
+++ b/index.html
@@ -85,10 +85,7 @@
 										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
-										<!-- <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
-										<li><a href="https://www.linkedin.com/in/mjkirshy"><img src="img/linkedin-icon.png" alt=""></a></li>
-										<li><a href="#"><i class="fab fa-linkedin"></i></li>
+										<li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fab fa-linkedin"></i></a></li>
 									</ul>
 								</div>
 							</div>
