--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Matthew Kirshy</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="css/linericon-style.css">
+        <link rel="stylesheet" href="Linericon/web_font/style.css" rel="stylesheet">
         <link rel="stylesheet" href="fontawesome-lib/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/simpleLightbox.css">
