--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 								<div class="personal_text">
 									<h6>Hello Everybody, I am</h6>
 									<h3>Matthew Kirshy</h3>
-									<h4>Senior Computer Science Student</h4>
-									<p>at University at Buffalo</p>
+									<h4>Senior Computer Science Student at University at Buffalo</h4>
+									<p>Graduating Spring of 2019</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
 										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> 
