--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
-									<h6>Hello Everybody, I am</h6>
+									<!-- <h6>Hello Everybody, I am</h6> -->
 									<h3>Matthew Kirshy</h3>
 									<h4>Senior Computer Science Student at University at Buffalo</h4>
 									<p>Graduating Spring of 2019</p>
