--- a/index.html
+++ b/index.html
@@ -80,12 +80,14 @@
 									<p>Graduating Spring of 2019</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
-										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> 
-										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>-->
+										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> -->
+										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="https://www.linkedin.com/in/mjkirshy"><i class="fab fa-linkedin"></i></a></li>
+										<li><a href="https://www.instagram.com/matthew_kadlubowski"><i class="fab fa-instagram"></i></a></li>
+										<li><a href="https://www.github.com/mjkirshy"><i class="fab fa-github"></i></a></li>
 									</ul>
 								</div>
 							</div>
