--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 									<p>Graduating Spring of 2019</p>
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
-										<!-- <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li> -->
-										<li><a href="#"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (716) 553-7092</a></li>
+										<li><a href="#"><a href="mailto:mjkirshy@buffalo.edu" target="_top"></a><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
