--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<ul class="list basic_info">
 										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (716) 553-7092</a></li>
-										<li><a href="mailto:mjkirshy@buffalo.edu" target="_top"><i class="lnr lnr-envelope"></i>mjkirshy@buffalo.edu</a></li>
+										<li><i class="lnr lnr-envelope"></i><a href="mailto:mjkirshy@buffalo.edu" target="_top">mjkirshy@buffalo.edu</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
 									</ul>
 									<ul class="list personal_social">
