--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 									<h4>Senior Computer Science Student at University at Buffalo</h4>
 									<p>Graduating Spring of 2019</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> January, 13th 1989</a></li>
+										<li><a href="img/Project_Resume.pdf" download="Matthew Kirshy Resume"><i class="lnr lnr-file-empty"></i> View Resume</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> (716) 553-7092</a></li>
 										<li><a href="mailto:mjkirshy@buffalo.edu"><i class="lnr lnr-envelope"></i> mjkirshy@buffalo.edu</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Buffalo, NY</a></li>
