--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
-        					<div class="row">
+        					<p>Hello, I am Matthew Kirshy. I am at Senior at the University at Buffalo studying Computer Science with a Data Science concentration. 
+							I will be graduating in the spring of 2019 and I am currently looking for full time employment. I am willing to move anywhere inside and outside the country. 
+							I am proficent in many languages including R, Python, SQL, Docker, and C++.
+							</p>
+        					<!-- <div class="row">
         						<div class="col-md-4">
         							<div class="wel_item">
         								<i class="lnr lnr-database"></i>
@@ -128,14 +131,14 @@
         								<p>Total Volunteers</p>
         							</div>
         						</div>
-        					</div>
+        					</div> -->
         				</div>
         			</div>
         			<div class="col-lg-6">
         				<div class="tools_expert">
         					<div class="skill_main">
 								<div class="skill_item">
-									<h4>After Effects <span class="counter">85</span>%</h4>
+									<h4>R & Shiny <span class="counter">85</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -143,15 +146,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Photoshop <span class="counter">90</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>Illustrator <span class="counter">70</span>%</h4>
+									<h4>Python <span class="counter">70</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
@@ -159,18 +154,26 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sublime <span class="counter">95</span>%</h4>
+									<h4>C++ <span class="counter">75</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Sketch <span class="counter">75</span>%</h4>
+									<h4>Docker <span class="counter">45</span>%</h4>
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>MySql <span class="counter">60</span>%</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
