--- a/index.html
+++ b/index.html
@@ -105,9 +105,11 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>Hello, I am Matthew Kirshy. I am at Senior at the University at Buffalo studying Computer Science with a Data Science concentration. 
-							I will be graduating in the spring of 2019 and I am currently looking for full time employment. I am willing to move anywhere inside and outside the country. 
-							I am proficent in many languages including R, Python, SQL, Docker, and C++.
+        					<p>
+								Hello, I am Matthew Kirshy. I am at Senior at the University at Buffalo studying Computer Science with a Data Science concentration. 
+								I will be graduating in the spring of 2019 and I am currently looking for full time employment. I am willing to move anywhere inside and outside the country. 
+								I am proficent in many languages including R, Python, SQL, Docker, and C++ with knowledge of Java and JavaScript. 
+								I am familar with and have personally used such enviroments as Visual Studios, VS Code, CLion, SQLDeveloper, HediSQL, and RStudio. 
 							</p>
         					<!-- <div class="row">
         						<div class="col-md-4">
