--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         					<p>
 								Hello, I am Matthew Kirshy. I am at Senior at the University at Buffalo studying Computer Science with a Data Science concentration. 
 								I will be graduating in the spring of 2019 and I am currently looking for full time employment. I am willing to move anywhere inside and outside the country. 
-								I am proficent in many languages including R, Python, SQL, Docker, and C++ with knowledge of Java and JavaScript. 
+								I am proficent in languages including R, Python, SQL, Docker, C#, and C++ with knowledge of Java and JavaScript. 
 								I am familar with and have personally used such enviroments as Visual Studios, VS Code, CLion, SQLDeveloper, HediSQL, and RStudio. 
 							</p>
         					<!-- <div class="row">
@@ -230,11 +230,11 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>2010 to February 2014</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<h5>Bacchus</h5>
+											<p>Saute Cook and Garde Manage <br />Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
