--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
         			<div class="col-lg-6">
         				<div class="tools_expert">
         					<div class="skill_main">
+								<h4>Experience Level</h4>
 								<div class="skill_item">
-									<h4>R & Shiny <span class="counter">85</span>%</h4>
+									<h4>R & Shiny: Professional</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -148,15 +149,23 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Python <span class="counter">70</span>%</h4>
+									 <h4>Python: Professional </h4> <!--<span class="counter">70</span>% -->
 									<div class="progress_br">
 										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+											<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>C++ <span class="counter">75</span>%</h4>
+									<h4>MySql: Professional</h4>
+									<div class="progress_br">
+										<div class="progress">
+											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+										</div>
+									</div>
+								</div>
+								<div class="skill_item">
+									<h4>C++: Academic </h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
@@ -164,18 +173,10 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>Docker <span class="counter">45</span>%</h4>
+									<h4>Docker: Academic</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
-										</div>
-									</div>
-								</div>
-								<div class="skill_item">
-									<h4>MySql <span class="counter">60</span>%</h4>
-									<div class="progress_br">
-										<div class="progress">
-											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 										</div>
 									</div>
 								</div>
