--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         					<p>
 								Hello, I am Matthew Kirshy. I am at Senior at the University at Buffalo studying Computer Science with a Data Science concentration. 
 								I will be graduating in the spring of 2019 and I am currently looking for full time employment. I am willing to move anywhere inside and outside the country. 
-								I am proficent in languages including R, Python, SQL, Docker, C#, and C++ with knowledge of Java and JavaScript. 
+								I am proficent in languages including R, Python, SQL, Git, Docker, C#, and C++ with knowledge of Java and JavaScript. 
 								I am familar with and have personally used such enviroments as Visual Studios, VS Code, CLion, SQLDeveloper, HediSQL, and RStudio. 
 							</p>
         					<!-- <div class="row">
@@ -157,7 +157,7 @@
 									</div>
 								</div>
 								<div class="skill_item">
-									<h4>MySql: Professional</h4>
+									<h4>MySql & Database Management: Professional</h4>
 									<div class="progress_br">
 										<div class="progress">
 											<div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
@@ -471,16 +471,16 @@
         <!--================Footer Area =================-->
         <footer class="footer_area p_120">
         	<div class="container">
-        		<div class="row footer_inner">
+        		<!--<div class="row footer_inner">
         			<div class="col-lg-5 col-sm-6">
         				<aside class="f_widget ab_widget">
         					<div class="f_title">
         						<h3>About Me</h3>
         					</div>
         					<p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving your skills,</p>
-        					<!--<p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
+        					<p> Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. 
 Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>-->
+ Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. </p>
         				</aside>
         			</div>
         			<div class="col-lg-5 col-sm-6">
@@ -514,7 +514,7 @@ Copyright &copy;<script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/clou
         					</ul>
         				</aside>
         			</div>
-        		</div>
+        		</div>-->
         	</div>
         </footer>
         <!--================End Footer Area =================-->
