work exp timeline

--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
         		<div class="tabs_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
-							<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">My Experiences</a>
+							<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Work Experiences</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">My Education</a>
+							<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">School Experiences</a>
 						</li>
 					</ul>
 					<div class="tab-content" id="myTabContent">
@@ -207,11 +207,12 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>Fall 2018 Semester</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<h4>Teaching Assistant</h4>
+											<h5>Software Engineering</h5>
+											<p>University at Buffalo <br />Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
@@ -219,11 +220,86 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>Summer 2018</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<h4>Software Developer Intern</h4>
+											<h5>Advance Document Imaging</h5>
+											<p>Computer Science Program <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Spring 2018 Semester</p>
+										</div>
+										<div class="media-body">
+											<h4>Teaching Assistant</h4>
+											<h5>Digital Systems</h5>
+											<p>University at Buffalo <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Spring 2015 to Spring 2016</p>
+										</div>
+										<div class="media-body">
+											<h4>Enroll in ECC</h4>
+											<p>Computer Science Program <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>August 2016 to April 2017</p>
+										</div>
+										<div class="media-body">
+											<h4>Kent Custom Cases</h4>
+											<p>Interm IT Director <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Fall 2016 to Present</p>
+										</div>
+										<div class="media-body">
+											<h4>Enroll at UB</h4>
+											<p>Computer Science Program <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Spring 2015 to Spring 2016</p>
+										</div>
+										<div class="media-body">
+											<h4>Enroll at ECC</h4>
+											<p>Computer Science Program <br />Buffalo, NY</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>February 2014 to April 2015</p>
+										</div>
+										<div class="media-body">
+											<h4>Olivers</h4>
+											<h5>Fine Dining Resturant</h5>
+											<p>Garde Manager <br />Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
@@ -235,7 +311,8 @@
 										</div>
 										<div class="media-body">
 											<h4>Bacchus</h4>
-											<p>Saute Cook and Garde Manage <br />Buffalo, NY</p>
+											<h5>Fine Dining Resturant</h5>
+											<p>Saute Cook & Garde Manage <br />Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
