work timeline fox 2

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>August 2016 to April 2017</p>
+											<p>08/2016 - 04/2017</p>
 										</div>
 										<div class="media-body">
 											<h4>Kent Custom Cases</h4>
@@ -258,7 +258,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Fall 2016 to Present</p>
+											<p>Fall 2016 - Present</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at UB</h4>
@@ -270,7 +270,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2015 to Spring 2016</p>
+											<p>Spring 2015 - Spring 2016</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at ECC</h4>
@@ -282,7 +282,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>February 2014 to April 2015</p>
+											<p>02/2014 - 04/2015</p>
 										</div>
 										<div class="media-body">
 											<h4>Olivers</h4>
@@ -295,7 +295,7 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>2010 to February 2014</p>
+											<p>2010 - 02/2014</p>
 										</div>
 										<div class="media-body">
 											<h4>Bacchus</h4>
