--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2015 - Spring 2016</p>
+											<p>Spring 2015 to<br /> Spring 2016</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at ECC</h4>
