--- a/index.html
+++ b/index.html
@@ -249,8 +249,9 @@
 											<p>08/2016 - 04/2017</p>
 										</div>
 										<div class="media-body">
-											<h4>Kent Custom Cases</h4>
-											<p>Interm IT Director <br />Buffalo, NY</p>
+											<h4>Interm IT Director</h4>
+											<h5>Kent Custom Cases</h5>
+											<p>Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
