--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         		<div class="tabs_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
-							<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Work Experiences</a>
+							<a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Life Experiences</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">School Experiences</a>
@@ -233,7 +233,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2018 Semester</p>
+											<p>Spr 2018 Semester</p>
 										</div>
 										<div class="media-body">
 											<h4>Teaching Assistant</h4>
@@ -246,7 +246,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>08/2016 - 04/2017</p>
+											<p>Aug 2016 to Apr 2017</p>
 										</div>
 										<div class="media-body">
 											<h4>Interm IT Director</h4>
@@ -271,7 +271,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2015 to<br /> Spring 2016&nbsp;&nbsp;&nbsp;</p>
+											<p>Spr 2015 to Spr 2016</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at ECC</h4>
@@ -283,7 +283,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>02/2014 - 04/2015</p>
+											<p>Feb 2014 to Apr 2015</p>
 										</div>
 										<div class="media-body">
 											<h4>Olivers</h4>
@@ -296,7 +296,7 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>2010 - 02/2014</p>
+											<p>Mar 2010 to Feb 2014</p>
 										</div>
 										<div class="media-body">
 											<h4>Bacchus</h4>
