--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Summer 2018</p>
+											<p>Summer of 2018</p>
 										</div>
 										<div class="media-body">
 											<h4>Software Developer Intern</h4>
@@ -249,7 +249,7 @@
 											<p>Aug 2016 to Apr 2017</p>
 										</div>
 										<div class="media-body">
-											<h4>Interm IT Director</h4>
+											<h4>Interim IT Director</h4>
 											<h5>Kent Custom Cases</h5>
 											<p>Buffalo, NY</p>
 										</div>
@@ -259,7 +259,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Fall 2016 - Present</p>
+											<p>Fall 2016 to Present</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at UB</h4>
