--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Summer of 2018</p>
+											<p>May 2018 to Aug</p>
 										</div>
 										<div class="media-body">
 											<h4>Software Developer Intern</h4>
