--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>May 2018 to Aug</p>
+											<p>May 2018 to Aug 2018</p>
 										</div>
 										<div class="media-body">
 											<h4>Software Developer Intern</h4>
@@ -250,8 +250,7 @@
 										</div>
 										<div class="media-body">
 											<h4>Interim IT Director</h4>
-											<h5>Kent Custom Cases</h5>
-											<p>Buffalo, NY</p>
+											<p>Kent Custom Cases<br />Buffalo, NY</p>
 										</div>
 									</div>
 								</li>
