--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Fall 2018 Semester</p>
+											<p>Aug 2018 to Dec 2018</p>
 										</div>
 										<div class="media-body">
 											<h4>Teaching Assistant</h4>
@@ -233,7 +233,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spr 2018 Semester</p>
+											<p>Jan 2018 to May 2018</p>
 										</div>
 										<div class="media-body">
 											<h4>Teaching Assistant</h4>
