--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Fall 2016 to Present</p>
+											<p>Spring 2016 to Present</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at UB</h4>
@@ -270,7 +270,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spr 2015 to Spr 2016</p>
+											<p>Spr 2015 to Fall 2016</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at ECC</h4>
