probable final timelines

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spr 2015 to Fall 2016</p>
+											<p>Spr 2015 to Fall 2015</p>
 										</div>
 										<div class="media-body">
 											<h4>Enroll at ECC</h4>
@@ -312,11 +312,13 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>Fall 2018 Semester</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<p>Algorithms<br />
+											   Functional Programming<br />
+											   Distributed Systems<br />
+											   Computational Linguistics</p>
 										</div>
 									</div>
 								</li>
@@ -324,11 +326,65 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>Spring 2018 Semester</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<p>Data Intensive Computing<br />
+											   Computer Organization<br />
+											   French</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Fall 2017 Semester</p>
+										</div>
+										<div class="media-body">
+											<p>Data Structures<br />
+											   Statistics<br />
+											   Digital Systems</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Fall 2016 Semester</p>
+										</div>
+										<div class="media-body">
+											<p>Calculus 3<br />
+											   Differential Equations<br />
+											   Discrete Structures</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Spring 2016 Semester</p>
+										</div>
+										<div class="media-body">
+											<p>Intro to Comp Sci 2<br />
+											   Professional Ethics<br />
+											   Into to Deductive Logic<br />
+											   Into to Philisophy</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<span></span>
+									<div class="media">
+										<div class="d-flex">
+											<p>Fall 2015 Semester</p>
+										</div>
+										<div class="media-body">
+											<p>Calculus 1<br />
+											   Calculus 2<br />
+											   Physics 1</p>
 										</div>
 									</div>
 								</li>
@@ -336,11 +392,12 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>March 2017 to present</p>
+											<p>Spring 2015 Semester</p>
 										</div>
 										<div class="media-body">
-											<h4>Colorlib</h4>
-											<p>Senior Web Developer <br />Santa monica, Los angeles</p>
+											<p>Intro to Comp Sci 1<br />
+											   Algebrea<br />
+											   Trigonometry</p>
 										</div>
 									</div>
 								</li>
