--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2018 Semester</p>
+											<p>Spr 2018 Semester</p>
 										</div>
 										<div class="media-body">
 											<p>Data Intensive Computing<br />
@@ -365,7 +365,7 @@
 									<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2016 Semester</p>
+											<p>Spr 2016 Semester</p>
 										</div>
 										<div class="media-body">
 											<p>Intro to Comp Sci 2<br />
@@ -392,7 +392,7 @@
 								<span></span>
 									<div class="media">
 										<div class="d-flex">
-											<p>Spring 2015 Semester</p>
+											<p>Spr 2015 Semester</p>
 										</div>
 										<div class="media-body">
 											<p>Intro to Comp Sci 1<br />
