--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="icon" href="img/favicon.png" type="image/png">
+        <!-- <link rel="icon" href="img/favicon.png" type="image/png"> -->
         <title>Matthew Kirshy</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
@@ -508,7 +508,7 @@
         </section>
         <!--================End Home Gallery Area =================-->
         
-        <!--================Testimonials Area =================-->
+        <!--================Testimonials Area =================
         <section class="testimonials_area p_120">
         	<div class="container">
         		<div class="main_title">
@@ -553,7 +553,7 @@
 					</div>
         		</div>
         	</div>
-        </section>
+        </section>-->
         <!--================End Testimonials Area =================-->
         
         <!--================Footer Area =================-->
