--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Matthew Kirshy</title>
+        <title>Matthew Kirshy's Personal Website</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="Linearicons/web_font/style.css" rel="stylesheet">
@@ -395,12 +395,13 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/project-1.jpg" alt="">
-        						<a class="light" href="img/gallery/project-1.jpg"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
+        						<img class="img-fluid" src="img/trump_tweet_capt.jpg" alt="">
+        						<a class="light" href="img/trump_tweet_capt.jpg"><i class="fab fa-twitter-square"></i></a>
+							</div>
+							<!-- https://mjkirshy.shinyapps.io/Trump/ -->
         					<div class="g_item_text">
-        						<h4>3D Helmet Design</h4>
-        						<p>Client Project</p>
+        						<a href="https://mjkirshy.shinyapps.io/Trump/"><h4>Trump's Tweet Text Mining</h4></a>
+        						<p>And sentiment analysis of indivisual tweets</p>
         					</div>
         				</div>
         			</div>
