--- a/index.html
+++ b/index.html
@@ -395,12 +395,12 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/trump_tweet_capt.jpg" alt="">
-        						<a class="light" href="img/trump_tweet_capt.jpg"><i class="fab fa-twitter-square"></i></a>
+        						<img class="img-fluid" src="img/trump_tweet_capt.JPG" alt="">
+        						<a class="light" href="img/trump_tweet_capt.JPG"><i class="fab fa-twitter-square"></i></a>
 							</div>
 							<!-- https://mjkirshy.shinyapps.io/Trump/ -->
         					<div class="g_item_text">
-        						<a href="https://mjkirshy.shinyapps.io/Trump/"><h4>Trump's Tweet Text Mining</h4></a>
+        						<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><h4>Trump's Tweet Text Mining</h4></a>
         						<p>And sentiment analysis of indivisual tweets</p>
         					</div>
         				</div>
