--- a/index.html
+++ b/index.html
@@ -395,8 +395,8 @@
         			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
         				<div class="h_gallery_item">
         					<div class="g_img_item">
-        						<img class="img-fluid" src="img/trump_tweet_capt.JPG" alt="">
-        						<a class="light" href="img/trump_tweet_capt.JPG"><i class="fab fa-twitter-square"></i></a>
+        						<img class="img-fluid" src="img/trump_tweet_capt.jpg" alt="">
+        						<a class="light" href="img/trump_tweet_capt.jpg"><i class="fab fa-twitter-square"></i></a>
 							</div>
 							<!-- https://mjkirshy.shinyapps.io/Trump/ -->
         					<div class="g_item_text">
