--- a/index.html
+++ b/index.html
@@ -380,53 +380,35 @@
 					</div>
         		</div>
         	</div>
-        </section>
-        
-        <!--================Home Gallery Area =================-->
-        <section class="home_gallery_area p_120">
+		</section>
+		
+		<!--================Feature Area =================-->
+        <section class="feature_area p_120">
         	<div class="container">
         		<div class="main_title">
         			<h2>My Latest Projects</h2>
-        			<p>Passion and School Projects I work on in my spare time</p>
+        			<p>Passion projects and school projects I work on in my spare time</p>
         		</div>
-        	</div>
-        	<div class="container">
-        		<div class="gallery_f_inner row imageGallery1">
-        			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/trump_tweet_capt.jpg" alt="">
-        						<a class="light" href="img/trump_tweet_capt.jpg"><i class="fab fa-twitter-square"></i></a>
-							</div>
-							<!-- https://mjkirshy.shinyapps.io/Trump/ -->
-        					<div class="g_item_text">
-        						<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><h4>Trump's Tweet Text Mining</h4></a>
-        						<p>And sentiment analysis of indivisual tweets</p>
-        					</div>
+        		<div class="feature_inner row">
+        			<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><i class="fab fa-twitter-square"></i></a>
+        					<h4>Trump's Tweet Text Mining</h4>
+        					<p>And sentiment analysis of indivisual tweets</p>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/project-2.jpg" alt="">
-        						<a class="light" href="img/gallery/project-2.jpg"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>2D Vinyl Design</h4>
-        						<p>Client Project</p>
-        					</div>
+        			<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-skyline"></i>
+        					<h4>Interior Design</h4>
+        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-4 col-sm-6 manipul creative design print">
-        				<div class="h_gallery_item">
-        					<div class="g_img_item">
-        						<img class="img-fluid" src="img/gallery/project-3.jpg" alt="">
-        						<a class="light" href="img/gallery/project-3.jpg"><img src="img/gallery/icon.png" alt=""></a>
-        					</div>
-        					<div class="g_item_text">
-        						<h4>Creative Poster Design</h4>
-        						<p>Client Project</p>
-        					</div>
+        			<div class="col-lg-4 col-md-6">
+        				<div class="feature_item">
+        					<i class="flaticon-sketch"></i>
+        					<h4>Concept Design</h4>
+        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
         			</div>
         		</div>
