--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         		<div class="feature_inner row">
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><img src="img/trump_tweet_capt.jpg"></a>
+        					<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><img src="img/trump_tweet_capt.jpg" width="340" height="340"></a>
         					<h4>Trump's Tweet Text Mining</h4>
         					<p>And sentiment analysis of indivisual tweets</p>
         				</div>
