--- a/index.html
+++ b/index.html
@@ -399,26 +399,26 @@
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-        					<i class="flaticon-skyline"></i>
-        					<h4>Interior Design</h4>
-        					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+        					<a href="https://mjkirshy.shinyapps.io/MyWayPoints/" rel="noopener noreferrer" target="_blank"><img src="img/waypoints.jpg" width="300" height="300"></a>
+        					<h4>Direction and Weather App</h4>
+        					<p>Using the Google Maps API and the Weather API you can type your strat point and end point, method of travel and get the fastest route with weather along your route</p>
         				</div>
         			</div>
-        			<div class="col-lg-4 col-md-6">
+        			<!-- <div class="col-lg-4 col-md-6">
         				<div class="feature_item">
         					<i class="flaticon-sketch"></i>
         					<h4>Concept Design</h4>
         					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
         				</div>
-        			</div>
+        			</div> -->
         		</div>
         	</div>
         </section>
         
-        <!--================Footer Area =================-->
+        <!--================Footer Area =================
         <footer class="footer_area p_120">
         	<div class="container"></div>
-        </footer>
+        </footer>-->
                 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
