--- a/index.html
+++ b/index.html
@@ -393,15 +393,15 @@
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
 							<a href="https://mjkirshy.shinyapps.io/Trump/" rel="noopener noreferrer" target="_blank"><img src="img/trump_tweet_capt.jpg" width="300" height="300"></a>
-							<br />
+							<pre>&#9;</pre>
         					<h4>Trump's Tweet Text Mining</h4>
         					<p>And sentiment analysis of indivisual tweets</p>
         				</div>
         			</div>
         			<div class="col-lg-4 col-md-6">
         				<div class="feature_item">
-							<a href="https://mjkirshy.shinyapps.io/MyWayPoints/" rel="noopener noreferrer" target="_blank"><img src="img/waypoints.jpg" width="280" height="280"></a>
-							<br />
+							<a href="https://mjkirshy.shinyapps.io/MyWayPoints/" rel="noopener noreferrer" target="_blank"><img src="img/waypoints.jpg" width="290" height="290"></a>
+							<pre>&#9;</pre>
         					<h4>Direction and Weather App</h4>
         					<p>Using the Google Maps API and the Weather API you can type your strat point and end point, method of travel and get the fastest route with weather along your route</p>
         				</div>
