--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </section>
         
         <!--================Welcome Area =================-->
-        <section class="welcome_area p_120">
-        	<div class="container" id="abt_me">
+        <section class="welcome_area p_120" id="abt_me">
+        	<div class="container">
         		<div class="row welcome_inner">
         			<div class="col-lg-6">
         				<div class="welcome_text">
@@ -148,8 +148,8 @@
         </section>
         
         <!--================My Tabs Area =================-->
-        <section class="mytabs_area p_120">
-        	<div class="container" id="experiences">
+        <section class="mytabs_area p_120" id="experiences">
+        	<div class="container">
         		<div class="tabs_inner">
 					<ul class="nav nav-tabs" id="myTab" role="tablist">
 						<li class="nav-item">
